--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script>
-        console.log("Salut");
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
