Create selection buttons for Rock,Paper, Scissors

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="options-container">
+        <button class="option">ROCK</button>
+        <button class="option">PAPER</button>
+        <button class="option">SCISSORS</button>
+    </div>
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
