Display round winner in div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <button class="option">PAPER</button>
         <button class="option">SCISSORS</button>
     </div>
-
+    <div class="score-box">
+        <div id="round">Round: 0</div>
+        <div>
+            <div id="user-score">Your Score: 0</div>
+            <div id="computer-score">Computer Score: 0</div>
+        </div>
+        <div id="winner"></div>
+    </div>
 
 
     <script src="script.js"></script>
